--- a/WEB_UI/Content/view/directory/home.css
+++ b/WEB_UI/Content/view/directory/home.css
@@ -27,6 +27,19 @@ input {
     /*font-size: 1.3rem;*/
 }
 
+.w-5 {
+    width:5%;
+}
+.w-10 {
+    width:10%;
+}
+.w-15 {
+    width:15%;
+}
+.w-20 {
+    width:20%;
+}
+
 /* -------------------------------- 
 
 Коррекция отображения компонента дата и время
