--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -88,6 +88,7 @@
                                             <button type="button" class="btn btn-outline-secondary" title="">Выгр.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Погр.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Весы.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Предоставить состав для сдачи на дорогу" id="provide">Пред.</button>
                                         </div>
                                         <div class="btn-group mr-2" role="group" aria-label="Second group">
                                             <button type="button" class="btn btn-outline-secondary" title="">Авто</button>
@@ -600,6 +601,83 @@
                                                     </fieldset>
                                                 </div>
                                             </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row operation-provide">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div class="card border-secondary mb-1">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col-xl-12 text-center">
+                                    <div class="container-fluid">
+                                        ОПЕРАЦИЯ "ПРЕДЪЯВЛЕНИЕ СОСТАВА НА УЗ"
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="card-body text-dark pl-3 pr-3">
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-primary">
+                                        <div class="card-header text-left">ПРЕДЪЯВИТЬ СОСТАВ</div>
+                                        <div class="card-body">
+                                            <div class="row">
+                                                <div class="col-xl-3">
+                                                    <fieldset class="border-primary">
+                                                        <div class="form-row text-center ">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <button class="btn btn-primary" id="operation_provide_run" disabled="disabled">@IDSRWTResource.title_operation_run</button>
+                                                            </div>
+
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_provide_station" class="col-form-label">@IDSRWTResource.title_operation_detali_provide_station:</label>
+                                                                <select class="form-control" id="operation_detali_provide_station" name="operation_detali_provide_station" disabled></select>
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-12 mb-1 text-left">
+                                                                <label for="operation_detali_provide_way_from" class="col-form-label">@IDSRWTResource.title_operation_detali_provide_way_from:</label>
+                                                                <input type="text" class="form-control" id="operation_detali_provide_way_from" name="operation_detali_provide_way_from" disabled/>
+                                                            </div>
+                                                        </div>
+                                                        <div class="form-row">
+                                                            <div class="col-xl-6 mb-1 text-left">
+                                                                <label for="operation_detali_provide_lead_time" class="col-form-label">@IDSRWTResource.title_operation_detali_lead_time</label>
+                                                                <input type="datetime" class="form-control" id="operation_detali_provide_lead_time" name="operation_detali_provide_lead_time" />
+                                                                <div class="invalid-feedback"></div>
+                                                            </div>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                                <div class="col-xl-9">
+                                                    <fieldset class="border-primary">
+                                                        <legend class="text-primary">Сформированный состав</legend>
+                                                        <div class="operator-detali-tables">
+                                                            <table id="wagons-provide" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                        </div>
+                                                    </fieldset>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row mb-1">
+                                <div class="col-xl-12">
+                                    <div class="card border-info">
+                                        <div class="card-header text-left">ВАГОНЫ ДЛЯ ПРЕДЪЯВЛЕНИЯ</div>
+                                        <div class="card-body operator-detali-tables">
+                                            <table id="wagons-provide-way-from" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
                                         </div>
                                     </div>
                                 </div>
