--- a/WEB_UI/Content/view/idsrwt/wsd.css
+++ b/WEB_UI/Content/view/idsrwt/wsd.css
@@ -306,3 +306,10 @@ fieldset {
     text-decoration: line-through;
 }
 
+
+.exist-amkr {
+    background-color:#deebbc !important;
+}
+.not-exist-amkr {
+    background-color:#f5cdb0 !important;
+}
