--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -84,7 +84,11 @@
         <div class="card border-dark mb-3">
             <div class="card-header bg-secondary text-white">Поезда по отправлению</div>
             <div class="card-body text-dark pl-3 pr-3">
-                <table class="table table-striped table-bordered" id="table-sostav-arrival" style="width:100%;"></table>
+                <div class="row">
+                    <div class="col-xl-12" style="font-size:14px;">
+                        <table class="display compact cell-border row-border hover" id="table-sostav-outgoing" style="width:100%"></table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
