park state add  - 7-19 set  - view date applied

--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -49,7 +49,9 @@
                                     <button type="button" class="btn btn-danger mr-3" id="delete_park_status" disabled>@DirectoryResource.title_delete</button>
                                     <label class="col-form-label text-white mr-2" for="input_park_status_on_dt" disabled>@DirectoryResource.title_park_status_on_dt:</label>
                                     <input type="datetime" id="input_park_status_on_dt" name="input_park_status_on_dt" class="form-control mr-3" style="font-size:1.5rem" disabled />
-                                    <button type="button" class="btn btn-primary" id="create_park_status" disabled>@DirectoryResource.title_create</button>
+                                    <button type="button" class="ml-1 btn btn-warning" id="set_7">7:00</button>
+                                    <button type="button" class="ml-1 btn btn-warning" id="set_19">19:00</button>
+                                    <button type="button" class="ml-2 btn btn-primary" id="create_park_status" disabled>@DirectoryResource.title_create</button>
                                 </form>
                             </div>
                         </div>
