--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -18,6 +18,7 @@
 
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
+    <script src="~/Scripts/api/ids_global.js"></script> <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/ids_sap.js"></script> <!-- Class API SAP функции для работы с САП -->
     <script src="~/Scripts/api/uz_directory.js"></script> <!-- Class API УЗ Справочники -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
@@ -61,6 +62,12 @@
                         <a class="dropdown-item" href="#">Отчет-2</a>
                         <a class="dropdown-item" href="#">Отчет-3</a>
                     </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link curent-info" href="#">
+                        На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.
+                    </a>
+                    
                 </li>
             </ul>
             <form class="form-inline my-2 my-md-0">
@@ -736,20 +743,20 @@
 
 
                                         @*<div class=" d-flex">
-                                            <div class="card-body operator-detali-tables" style="width:100%">
-                                                <table id="wagons-provide-way-from" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
-                                            </div>
-                                            <div class="collapse" id="collect_wagon" style="width:75%">
-                                                <div class="row">
-                                                    <div class="col-xl-12 operator-detali-tables">
-                                                        <fieldset class="border-primary m-2">
-                                                            <legend>Собрать по всем станциям</legend>
+                                                <div class="card-body operator-detali-tables" style="width:100%">
+                                                    <table id="wagons-provide-way-from" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                </div>
+                                                <div class="collapse" id="collect_wagon" style="width:75%">
+                                                    <div class="row">
+                                                        <div class="col-xl-12 operator-detali-tables">
+                                                            <fieldset class="border-primary m-2">
+                                                                <legend>Собрать по всем станциям</legend>
 
-                                                        </fieldset>
+                                                            </fieldset>
+                                                        </div>
                                                     </div>
                                                 </div>
-                                            </div>
-                                        </div>*@
+                                            </div>*@
                                     </div>
                                 </div>
                             </div>
