--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -129,7 +129,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer bg-transparent border-dark">&copy; @DateTime.Now.Year ДАТП & ТД  (На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.)</div>
+                <div class="card-footer bg-transparent border-dark">&copy; @DateTime.Now.Year ДАТП & ТД  (На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.)  <label id="curent_apply" style="color:red"></label></div>
             </div>
         </div>
     </div>
