--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -227,7 +227,7 @@
                                                 </div>
                                             </div>
                                             <div class="col-md-3 mb-1 text-left">
-                                                <label for="arrival_cars_position_arrival" class="col-form-label">@IDSRWTResource.title_position_arrival:</label>
+                                                <label for="arrival_cars_position_arrival" class="col-form-label">@IDSRWTResource.title_position:</label>
                                                 <input type="number" value="1" class="form-control inp-manual" min="1" max="120" step="1" id="arrival_cars_position_arrival" name="arrival_cars_position_arrival" title="Ручной ввод (номер вагона в составе)" data-mode="edit-global" data-edit="" data-form="transceiver" />
                                                 <div class="invalid-feedback">
                                                 </div>
