add dir Directory_Reason_Discrepancy deverlop form Outgoing add visual componet + list

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Outgoing.cshtml
@@ -237,13 +237,19 @@
                                             <fieldset class="border-primary">
                                                 <legend>@IDSRWTResource.title_loading_data</legend>
                                                 <div class="form-row">
-                                                    <div class="col-xl-6 mb-1 text-left">
+                                                    <div class="col-xl-5 mb-1 text-left">
                                                         <label for="cargo_name" class="mb-1">@IDSRWTResource.title_cargo_name:</label>
                                                         <input type="text" class="form-control inp-manual" id="cargo_name" name="cargo_name" title="" data-mode="edit" data-edit="" data-form="transceiver">
                                                         <div class="invalid-feedback">
                                                         </div>
                                                     </div>
-                                                    <div class="col-xl-6 mb-1 text-left">
+                                                    <div class="col-xl-2 mb-1 text-left">
+                                                        <label for="loading_devision_code" class="mb-1">@IDSRWTResource.title_loading_devision_code:</label>
+                                                        <input type="text" class="form-control inp-auto" id="loading_devision_code" name="loading_devision_code" title="" data-mode="" data-edit="" data-form="transceiver">
+                                                        <div class="invalid-feedback">
+                                                        </div>
+                                                    </div>                                                    
+                                                    <div class="col-xl-5 mb-1 text-left">
                                                         <label for="loading_devision" class="mb-1">@IDSRWTResource.title_loading_devision:</label>
                                                         <input type="text" class="form-control inp-manual" id="loading_devision" name="loading_devision" title="" data-mode="edit" data-edit="" data-form="transceiver">
                                                         <div class="invalid-feedback">
@@ -359,7 +365,7 @@
                                                 </div>
                                                 <div class="form-row">
                                                     <div class="col-xl-4 mb-1 text-left">
-                                                        <label for="date_arrival" class="mb-1">@IDSRWTResource.title_date_arrival:</label>
+                                                        <label for="date_arrival" class="mb-1">@IDSRWTResource.title_date_adoption:</label>
                                                         <input type="datetime" class="form-control inp-auto" id="date_arrival" name="date_arrival" title="" data-mode="" data-edit="" data-form="transceiver">
                                                     </div>
                                                     <div class="col-xl-4 mb-1 text-left">
