--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -669,9 +669,15 @@
                                                 <div class="col-xl-9">
                                                     <fieldset class="border-primary">
                                                         <legend class="text-primary">Сформированный состав</legend>
+                                                        <h2 class="text-primary" style="text-transform: uppercase;">Сформированый состав</h2>
+                                                        <div class="operator-detali-tables">
+                                                            <table id="wagons-provide-exist" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
+                                                        </div>
+                                                        <h2 class="text-primary mt-1" style="text-transform: uppercase;">Добавить или создать новый состав</h2>
                                                         <div class="operator-detali-tables">
                                                             <table id="wagons-provide" class="compact table table-striped table-hover" style="width:100%; table-layout: fixed"></table>
                                                         </div>
+
                                                     </fieldset>
                                                 </div>
                                             </div>
