--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -61,7 +61,7 @@
                         <ul class="is-hidden">
                             <li class="go-back"><a href="#0">Справочники ИДС</a></li>
                             <li class="see-all"><a href="#">Маршруты и клиенты</a></li>
-                            <li><a href="#">Внешние станции</a></li>
+                            <li><a href='@Url.Action("ExternalStation", "Home", new { Area = "Directory" })'>Внешние станции</a></li>
                             <li><a href="#0">Пограничные пункты</a></li>
                             <li><a href="#0">Грузоотправители</a></li>
                             <li><a href="#0">Грузополучатели</a></li>
