fix table incoming

--- a/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/Incoming.cshtml
@@ -105,7 +105,7 @@
             <div class="card-body text-dark pl-3 pr-3">
                 <div class="row">
                     <div class="col-xl-12" style="font-size:14px;">
-                        <table class="display compact cell-border row-border hover" id="table-sostav-arrival" style="width:100%; table-layout:fixed"></table>
+                        <table class="display compact cell-border row-border hover" id="table-sostav-arrival" style="width:100%;"></table>
                     </div>
                 </div>
             </div>
