add form edit dir external station

--- a/WEB_UI/Areas/Directory/Views/Home/ExternalStation.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ExternalStation.cshtml
@@ -40,11 +40,11 @@
                 <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
                     <div class="row">
                         <div class="col-xl-12 text-center">
-                            <table id="table-directory" class="display compact hover row-border" style="width:100%"></table>
+                            <table id="table-directory" class="display compact cell-border row-border hover" style="width:100%"></table>
                         </div>
                     </div>
                 </div>
-                <div class="card-footer bg-transparent border-dark">&copy; @DateTime.Now.Year ДАТП & ТД  (На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.)  <label id="curent_apply" style="color:red"></label></div>
+                <div class="card-footer bg-transparent border-dark">&copy; @DateTime.Now.Year ДАТП & ТД</div>
             </div>
         </div>
     </div>
